fix: build issue and alignment issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -118,3 +118,7 @@ a {
         background-position: 0% 50%;
     }
 }
+
+.overflow-auto {
+    overflow: auto;
+}
